src/runtime-rs/vendor/actix-macros/tests/trybuild/test-06-unknown-attr.stderr
error: Unknown attribute specified
 --> $DIR/test-06-unknown-attr.rs:1:18
  |
1 | #[actix_rt::test(foo = "bar")]
  |                  ^^^^^^^^^^^

error: Unknown attribute specified
 --> $DIR/test-06-unknown-attr.rs:4:18
  |
4 | #[actix_rt::test(bar::baz)]
  |                  ^^^^^^^^
