src/runtime-rs/vendor/actix-macros/tests/trybuild/test-06-unknown-attr.rs
#[actix_rt::test(foo = "bar")]
async fn my_test_1() {}

#[actix_rt::test(bar::baz)]
async fn my_test_2() {}

fn main() {}
